--- a/styles.css
+++ b/styles.css
@@ -30,8 +30,8 @@ body {
     position: relative;
     width: 1px;
     height: 1px;
-    transition: transform 0.5s ease-out;
-    transform-origin: center center;
+    transition: transform 0.1s ease-out;
+    transform-origin: 0 0;
 }
 
 #star {
