--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,7 @@ body {
     width: 1px;
     height: 1px;
     transition: transform 0.5s ease-out;
+    transform-origin: center center;
 }
 
 #star {
