--- a/styles.css
+++ b/styles.css
@@ -28,10 +28,10 @@ body {
 
 #solar-system {
     position: relative;
-    width: 1px;
-    height: 1px;
-    transition: transform 0.5s ease-out;
-    transform-origin: center center;
+    width: 100%;
+    height: 100%;
+    transform-origin: 0 0;
+    transition: transform 0.2s ease-out;
 }
 
 #star {
