--- a/styles.css
+++ b/styles.css
@@ -248,6 +248,11 @@ body.zoomed-in .planet-tooltip {
     background-color: rgba(255, 255, 255, 0.4);
 }
 
+/* Ensure the add/edit/import modals appear on top of the list modal */
+#add-bookmark-modal, #import-bookmarks-modal {
+    z-index: 2500;
+}
+
 /* Remove old controls */
 #controls {
     display: none;
